# proxysrv

./: README.md
expat/: Makefile  config.status  libexpat.la  libtool
expat/xmlwf/: xmlwf
expat/xmlwf/.libs/: xmlwf
opensbc/: Main.cxx  Makefile  Makefile.in  OpenSBC.cxx  OpenSBC.h  OpenSBC.sln  OpenSBC.sln.in  OpenSBC.vcproj  OpenSBC.vcproj.in  RouteRecord.cxx  RouteRecord.h  Router.cxx  Router.h  SBCAuthHandler.cxx  SBCAuthHandler.h  SBCCallHandler.cxx  SBCCallHandler.h  SBCRoutingHandler.cxx  SBCRoutingHandler.h  Version.h  config.status  configure  configure.ac  opensbc-7.10.sln  opensbc-7.10.vcproj  sbcbuildopts.h  sbcbuildopts.h.in
opensbc/Tools/SBCLaunchPad/: Makefile.in  ProcessMonitor.cxx  ProcessMonitor.h  SBCLaunchPad-7.10.sln  SBCLaunchPad-7.10.vcproj  SBCLaunchPad.cxx  SBCLaunchPad.h  SBCLaunchPad.sln  SBCLaunchPad.vcproj  SBCSysLog.cxx  SBCSysLog.h  ShellUtils.cxx  ShellUtils.h  configure  configure.ac
opensbc/Tools/SQPlus/: Makefile  squirrel.sln
opensbc/Tools/SQPlus/sqplus/: SqPlusConst.h  SquirrelBindingsUtilsWin32.h  SquirrelVM.cpp  sqplus.h  sqplus.vcproj  sqplus71.vcproj
opensbc/obj_linux_x86_r/: oss-application.conf.xml
opensipstack/: Makefile  Makefile.in  OpenSIPStack-7.10.sln  OpenSIPStack-7.10.vcproj  OpenSIPStack.sln  OpenSIPStack.vcproj  ReadMe.txt  a.out  config.status  configure  configure.ac  configure.oss  version.h
opensipstack/include/: A1Hash.h  A2Hash.h  B2BAuthInterface.h  B2BCallInterface.h  B2BInterface.h  B2BMediaInterface.h  B2BRoutingInterface.h  B2BUA.h  B2BUACall.h  B2BUAConnection.h  B2BUAEndPoint.h  B2BUAForkCalls.h  BambooDHT.h  CSeq.h  CacheManager.h  CacheObject.h  CallSession.h  CallSessionManager.h  Contact.h  ContactURI.h  DialogId.h  ECCIAPI.h  EventQueue.h  GCObject.h  InviteClientTransaction.h  InviteServerTransaction.h  Logger.h  MD5Authorization.h  MD5Hash.h  MWIPackage.h  MWIResource.h  MessageHeaders.h  MimeHeader.h  MimeParam.h  Nonce.h  NoneInviteClientTransaction.h  NoneInviteServerTransaction.h  OSSAppConfig.h  OSSApplication.h  OpalOSSConnection.h  (+94 more)
opensipstack/include/codec/: allcodecs.h  echocancel.h  g711codec.h  g7231codec.h  g726codec.h  g729codec.h  gsmcodec.h  h261codec.h  h263codec.h  ilbccodec.h  lpc10codec.h  opalwavfile.h  rfc2833.h  silencedetect.h  speexcodec.h  vidcodec.h
opensipstack/include/inlines/: dtmf_0.h  dtmf_1.h  dtmf_10.h  dtmf_11.h  dtmf_2.h  dtmf_3.h  dtmf_4.h  dtmf_5.h  dtmf_6.h  dtmf_7.h  dtmf_8.h  dtmf_9.h  ring_0.h
opensipstack/include/lids/: QTIoctl.h  alllids.h  ixjDefs.h  ixjidb.h  ixjlid.h  lid.h  lidep.h  sangomalid.h  vblasterlid.h  vpblid.h
opensipstack/include/opal/: buildopts.h  buildopts.h.in  call.h  connection.h  endpoint.h  guid.h  ivr.h  manager.h  mediafmt.h  mediastrm.h  opalvxml.h  patch.h  pcss.h  sdp.h  transcoders.h  transports.h
opensipstack/include/ptclib/: cypher.h  delaychan.h  dtmf.h  enum.h  ftp.h  html.h  http.h  httpform.h  httpsvc.h  inetprot.h  ipacl.h  memfile.h  mime.h  modem.h  paec.h  pdns.h  pils.h  pldap.h  pnat.h  psasl.h  psoap.h  pssl.h  pstun.h  ptts.h  pvfiledev.h  pvidfile.h  pwavfile.h  pxml.h  pxmlrpc.h  pxmlrpcs.h  qchannel.h  random.h  shttpsvc.h  sockagg.h  socks.h  url.h  vsdl.h  vxml.h
opensipstack/include/ptlib/: args.h  array.h  channel.h  conchan.h  config.h  contain.h  contain.inl  critsec.h  dict.h  (+48 more)
opensipstack/make/: common.mak  defaultgui.mak  gui.mak  lib.mak  opensipstack.mak  opensipstack.mak.in  ptbuildopts.mak  ptlib-config  ptlib.mak  pwlib.mak  unix.mak
opensipstack/src/: A1Hash.cxx  A2Hash.cxx  B2BAuthInterface.cxx  B2BCallInterface.cxx  B2BMediaInterface.cxx  B2BRoutingInterface.cxx  B2BUA.cxx  B2BUACall.cxx  B2BUAConnection.cxx  B2BUAEndPoint.cxx  B2BUAForkCalls.cxx  BambooDHT.cxx  CSeq.cxx  CacheManager.cxx  CacheObject.cxx  CallSession.cxx  CallSessionManager.cxx  Contact.cxx  ContactURI.cxx  DialogId.cxx  ECCIAPI.cxx  EventQueue.cxx  GCObject.cxx  InviteClientTransaction.cxx  InviteServerTransaction.cxx  Logger.cxx  MD5Authorization.cxx  MD5Hash.cxx  MWIPackage.cxx  MWIResource.cxx  Makefile  Makefile.in  MessageHeaders.cxx  MimeHeader.cxx  MimeParam.cxx  Nonce.cxx  NoneInviteClientTransaction.cxx  NoneInviteServerTransaction.cxx  OSSAppConfig.cxx  OSSApplication.cxx  (+84 more)
(+338 files in other folders)
